docker-compose/templates/elastic-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -c
    kompose.version: 1.24.0 (4a2a0458)
  creationTimestamp: null
  labels:
    io.kompose.service: elastic
  name: elastic
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: elastic
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -c
        kompose.version: 1.24.0 (4a2a0458)
      creationTimestamp: null
      labels:
        io.kompose.network/superdesk: "true"
        io.kompose.service: elastic
    spec:
      containers:
        - env:
            - name: discovery.type
              value: single-node
          image: docker.elastic.co/elasticsearch/elasticsearch:7.10.1
          name: elastic
          resources: {}
      restartPolicy: Always
status: {}
