docker-compose/templates/superdesk-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -c
    kompose.version: 1.24.0 (4a2a0458)
  creationTimestamp: null
  labels:
    io.kompose.service: superdesk-server
  name: superdesk-server
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: superdesk-server
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -c
        kompose.version: 1.24.0 (4a2a0458)
      creationTimestamp: null
      labels:
        io.kompose.network/superdesk: "true"
        io.kompose.service: superdesk-server
    spec:
      containers:
        - env:
            - name: ARCHIVED_URI
              value: mongodb://mongodb/superdesk_archive
            - name: CELERY_BROKER_URL
              value: redis://redis:6379/1
            - name: CONTENTAPI_MONGO_URI
              value: mongodb://mongodb/superdesk_capi
            - name: CONTENTAPI_URL
              value: http://localhost:8080/capi
            - name: DEFAULT_TIMEZONE
              value: Europe/Prague
            - name: DEMO_DATA
              value: "1"
            - name: ELASTICSEARCH_INDEX
              value: superdesk
            - name: ELASTICSEARCH_URL
              value: http://elastic:9200
            - name: LEGAL_ARCHIVE_URI
              value: mongodb://mongodb/superdesk_legal
            - name: MONGO_URI
              value: mongodb://mongodb/superdesk
            - name: PUBLICAPI_MONGO_URI
              value: mongodb://mongodb/superdesk_papi
            - name: REDIS_URL
              value: redis://redis:6379/1
            - name: SUPERDESK_CLIENT_URL
              value: http://localhost:8080
            - name: WEB_CONCURRENCY
              value: "2"
          image: sourcefabricoss/superdesk-server:latest
          name: superdesk-server
          resources: {}
      restartPolicy: Always
status: {}
