docker-compose/templates/superdesk-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: superdesk
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/superdesk: "true"
  podSelector:
    matchLabels:
      io.kompose.network/superdesk: "true"
